Fix scrolling issue on mobile due to sizing

--- a/styles.css
+++ b/styles.css
@@ -8,7 +8,7 @@
 
 body {
     overflow-x: hidden;    
-    height: 100lvh; 
+    height: 100svh; 
     top: 1px;          
     margin: 0;
     padding: 0;
